# gerenciamentodedadoscrm

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Métricas Gerenciamento - original.xlsx  PRD-backend.md  README.md  build_planilha.py  dashboard-crm.html  docs-crm.html  pyproject.toml  recompra-crm.html  requirements.txt  vercel.json
Controle Geral/: ARCHITECTURE.md
Gerenciador de CRM/: Métricas Gerenciamento v2.xlsx  README.md
api/cron/: app.py  community.py  email_campaign.py  email_flow.py  forms.py  leads_sheets.py  repurchase.py  revenue.py  sessions.py  wpp_flow.py
docs/sessions/: 2026-06-08-comunidade-sendflow.md  2026-06-17-diagnostico-queda-canais-crm.md
ingestion/: alert.py  campaign_metrics_daily.py  community_daily.py  flow_metrics_daily.py  main.py  main_repurchase_deals.py  scheduler.py  sync_server.py
ingestion/analytics/: repurchase_monthly_metrics.py
ingestion/backfill/: load_repurchase_deals_historico.py
ingestion/db/: client.py  writers.py
ingestion/models/: klaviyo_models.py  repurchase_deals_models.py  sendflow_models.py  sheets_models.py  shopify_models.py  wpp_flow_models.py
ingestion/sources/: google_sheets.py  klaviyo.py  klaviyo_flow_metrics.py  leads_sheets_export.py  sendflow.py  (+3 more)
mc-growth/: .gitignore  ARCHITECTURE.md  Abrir Painel MC.command  CLAUDE.md  PRODUCT.md  _agregar_dados_painel.py  _gerar_nota_obsidian.py  _gerar_painel.py  cascata.py  checar_base.py  checar_coerencia.py  coortes.py  coortes_ui.py  dados.py  jornada_produto.py  motor-crescimento-lucrativo-true-classic.md  painel.py  portas.py  ui.py
(+135 files in other folders)
