[project]
name = "gerenciamentodedadoscrm"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask==3.0.3",
    "httpx==0.27.2",
    "pydantic==2.7.4",
    "python-dotenv==1.0.1",
    "supabase==2.5.3",
    "gspread==6.1.2",
    "schedule==1.2.2",
    "python-dateutil==2.9.0",
]

[tool.vercel]
entrypoint = "api.cron.app:app"
